ME-3930 Alignment issue in Outfit product page

--- a/initData/progressiveTemplates/liveApps/outfit/src/app/addons/categories/categories.component.css
+++ b/initData/progressiveTemplates/liveApps/outfit/src/app/addons/categories/categories.component.css
@@ -1,3 +1,7 @@
 .breadcrumb {
     background-color: rgba(245, 245, 245, 0);
 }
+
+.sold-out{
+    height:55px;
+}
