--- a/initData/progressiveTemplates/liveApps/outfit/src/app/page-body/shop/shop.component.css
+++ b/initData/progressiveTemplates/liveApps/outfit/src/app/page-body/shop/shop.component.css
@@ -14,3 +14,7 @@
 .price-margin{
    margin: 5px 0;
 }
+
+.sold-out{
+    height: 55px;
+}
